Closed Bug 1814526 Opened 2 years ago Closed 2 years ago

Perma [TIer 2] /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h:125:21: error: comparison of unsigned expression in '< 0' is always false [-Werror=type-limits]

Categories

(Core :: MFBT, defect, P5)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox109 --- unaffected
firefox110 --- unaffected
firefox111 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: padenot, NeedInfo)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=404274009&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Ls4UY9e9T3eQVY7ddtazjA/runs/0/artifacts/public/logs/live_backing.log


INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/tools/profiler'
[task 2023-02-01T22:31:15.490Z] 22:31:15     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/tools/profiler'
[task 2023-02-01T22:31:15.491Z] 22:31:15     INFO -  tools/profiler/Unified_cpp_tools_profiler2.o
[task 2023-02-01T22:31:15.491Z] 22:31:15     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/tools/profiler'
[task 2023-02-01T22:31:16.001Z] 22:31:16     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/mfbt/tests'
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -o TestCasting.o -c  -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -I/builds/worker/checkouts/gecko/mfbt/tests -I/builds/worker/workspace/obj-build/mfbt/tests -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/testing -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -freorder-blocks -O2 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wno-invalid-offsetof -Wc++2a-compat -Wcomma-subscript -Wvolatile -Wno-error=deprecated -Wno-error=deprecated-enum-enum-conversion -Wduplicated-cond -Wimplicit-fallthrough -Wlogical-op -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-multistatement-macros -Wno-error=class-memaccess -Wformat -Wformat-overflow=2 -Wno-psabi -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/TestCasting.o.pp   /builds/worker/checkouts/gecko/mfbt/tests/TestCasting.cpp
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  In file included from /builds/worker/checkouts/gecko/mfbt/tests/TestCasting.cpp:7:
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h: In instantiation of 'bool mozilla::detail::IsInBounds(In) [with In = float; Out = long unsigned int]':
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/checkouts/gecko/mfbt/tests/TestCasting.cpp:157:3:   required from here
[task 2023-02-01T22:31:16.013Z] 22:31:16    ERROR -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h:125:21: error: comparison of unsigned expression in '< 0' is always false [-Werror=type-limits]
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -    125 |       if (asInteger < 0 || asInteger > outMax) {
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -        |           ~~~~~~~~~~^~~
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h: In instantiation of 'bool mozilla::detail::IsInBounds(In) [with In = float; Out = unsigned int]':
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/checkouts/gecko/mfbt/tests/TestCasting.cpp:159:3:   required from here
[task 2023-02-01T22:31:16.013Z] 22:31:16    ERROR -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h:125:21: error: comparison of unsigned expression in '< 0' is always false [-Werror=type-limits]
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h: In instantiation of 'bool mozilla::detail::IsInBounds(In) [with In = float; Out = short unsigned int]':
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/checkouts/gecko/mfbt/tests/TestCasting.cpp:161:3:   required from here
[task 2023-02-01T22:31:16.013Z] 22:31:16    ERROR -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h:125:21: error: comparison of unsigned expression in '< 0' is always false [-Werror=type-limits]
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h: In instantiation of 'bool mozilla::detail::IsInBounds(In) [with In = float; Out = unsigned char]':
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/checkouts/gecko/mfbt/tests/TestCasting.cpp:163:3:   required from here
[task 2023-02-01T22:31:16.013Z] 22:31:16    ERROR -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h:125:21: error: comparison of unsigned expression in '< 0' is always false [-Werror=type-limits]
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h: In instantiation of 'bool mozilla::detail::IsInBounds(In) [with In = float; Out = long int]':
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/checkouts/gecko/mfbt/tests/TestCasting.cpp:166:3:   required from here
[task 2023-02-01T22:31:16.013Z] 22:31:16    ERROR -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h:125:21: error: comparison of unsigned expression in '< 0' is always false [-Werror=type-limits]
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h: In instantiation of 'bool mozilla::detail::IsInBounds(In) [with In = float; Out = int]':
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/checkouts/gecko/mfbt/tests/TestCasting.cpp:168:3:   required from here
[task 2023-02-01T22:31:16.013Z] 22:31:16    ERROR -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h:125:21: error: comparison of unsigned expression in '< 0' is always false [-Werror=type-limits]
[task 2023-02-01T22:31:16.013Z] 22:31:16     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h: In instantiation of 'bool mozilla::detail::IsInBounds(In) [with In = float; Out = short int]':
[task 2023-02-01T22:31:16.014Z] 22:31:16     INFO -  /builds/worker/checkouts/gecko/mfbt/tests/TestCasting.cpp:170:3:   required from here
[task 2023-02-01T22:31:16.014Z] 22:31:16    ERROR -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h:125:21: error: comparison of unsigned expression in '< 0' is always false [-Werror=type-limits]
[task 2023-02-01T22:31:16.014Z] 22:31:16     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h: In instantiation of 'bool mozilla::detail::IsInBounds(In) [with In = float; Out = signed char]':
[task 2023-02-01T22:31:16.015Z] 22:31:16     INFO -  /builds/worker/checkouts/gecko/mfbt/tests/TestCasting.cpp:172:3:   required from here
[task 2023-02-01T22:31:16.015Z] 22:31:16    ERROR -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h:125:21: error: comparison of unsigned expression in '< 0' is always false [-Werror=type-limits]
[task 2023-02-01T22:31:16.015Z] 22:31:16     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h: In instantiation of 'bool mozilla::detail::IsInBounds(In) [with In = double; Out = long unsigned int]':
[task 2023-02-01T22:31:16.015Z] 22:31:16     INFO -  /builds/worker/checkouts/gecko/mfbt/tests/TestCasting.cpp:103:3:   required from 'void checkBoundariesFloating(In, Out) [with In = double; Out = long unsigned int]'
[task 2023-02-01T22:31:16.015Z] 22:31:16     INFO -  /builds/worker/checkouts/gecko/mfbt/tests/TestCasting.cpp:187:44:   required from here
<...>
Flags: needinfo?(padenot)

Set release status flags based on info from the regressing bug 646323

Assignee: nobody → padenot
Status: NEW → ASSIGNED
Pushed by padenot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f7342c32fffb Don't check if an unsigned value is less than 0 in Casting.h. r=kinetik
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: