Bug 1814526 - Don't check if an unsigned value is less than 0 in Casting.h. r=kinetik

Differential Revision: https://phabricator.services.mozilla.com/D168786